--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,5 +22,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.example.coolweather.activity.WeatherActivity"></activity>
     </application>
 </manifest>
